# setting_OpenGL_ES

./: CMakeLists.txt  README.md  main.cpp
dep/GLAD/include/glad/: glad.h
dep/GLAD/src/: glad.c
dep/MacOS/CGLM/lib/: libcglm.0.9.1.dylib
dep/MacOS/GLFW/: INSTALL_RECEIPT.json
dep/MacOS/SDL2/: INSTALL_RECEIPT.json
dep/MacOS/SDL2/.brew/: sdl2.rb
dep/MacOS/SDL2/include/SDL2/: SDL_haptic.h
lib/objects/: README.md
lib/rendering/: README.md
lib/utils/: README.md  error.cpp  error.h  shader.cpp  shader.h
